--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -12,3 +12,23 @@ strong {
 p {
     font-family: sans-serif;
 }
+.add-to-cart-button{
+    padding: 10px;
+    background-color: gray;
+    display: block;
+    border: 1px solid white;
+    color: white;
+    text-decoration: none;
+}
+
+.product-list{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.product{
+    min-width: 200px;
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid gray;
+}
