--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -6,11 +6,11 @@
 <div th:replace="fragments/navigation::navbar"></div>
 <section class="product-list">
     <div class="product" th:each="product:${productList}">
-        <h3 th:text ="${product.name}"></h3>
+        <a th:href="@{/product-detail/{id} (id=${product.id})}" ><h3 th:text ="${product.name}"></h3></a>
+        <img th:if="${product.pathToImage!=null}" th:src="@{/img/{path} (path=${product.pathToImage})}" width="200">
         <a class="add-to-cart-button" th:href="@{'/shopping-cart-remove/' + ${product.getId()}}">-</a>
         <a class="add-to-cart-button" th:href="@{'/shopping-cart-add/' + ${product.getId()}}">+</a>
     </div>
-    1:15:26
 </section>
 </body>
 </html>
